force-app/main/default/objects/CLM_Message_Response__c/CLM_Message_Response__c.object-meta.xml
<CustomObject>
    <label>CLM Message Response</label>
    <nameField>
        <displayFormat>CLMR-{00000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CLM Message Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>