force-app/main/default/objects/CLM_Message_Response__c/fields/CLM_Presentation_Session__c.field-meta.xml
<CustomField>
    <fullName>CLM_Presentation_Session__c</fullName>
    <label>CLM Presentation Session</label>
    <referenceTo>CLM_Presentation_Session__c</referenceTo>
    <relationshipLabel>CLM Message Responses</relationshipLabel>
    <relationshipName>CLM_Message_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>