force-app/main/default/objects/CLM_Message_Response__c/fields/Message_Name__c.field-meta.xml
<CustomField>
    <fullName>Message_Name__c</fullName>
    <label>Message Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>