force-app/main/default/objects/CLM_Message_Response__c/fields/Visit_Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Visit_Product_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Product Detail</label>
    <referenceTo>Visit_Product_Detail__c</referenceTo>
    <relationshipLabel>CLM Message Responses</relationshipLabel>
    <relationshipName>CLM_Message_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>